event-service/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: event-service
  labels:
    app: event-service
    service: event-service
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "8082"
    prometheus.io/path: "/actuator/prometheus"
    service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
spec:
  type: ClusterIP
  selector:
    app: event-service
  ports:
    - name: http
      port: 8082
      targetPort: 8082
      protocol: TCP
    - name: grpc
      port: 9090
      targetPort: 9090
      protocol: TCP
    - name: health
      port: 8080
      targetPort: 8080
      protocol: TCP
